# instrumentum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: Tests.yml  ci.yml  linting.yml  main.yml  publish.yml  quality.yml  test.yml
docs/: Makefile  conf.py  example.ipynb  examples.ipynb  examples_plots.ipynb  make.bat  shap_extension_test.ipynb
docs/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/catboost_info/learn/: events.out.tfevents
docs/sample_data/: simple.csv  simple.xlsx  time_series.csv
src/instrumentum/: __init__.py
src/instrumentum/analysis/: dashboards.py  dataframes.py  distribution_analyzer.py  liftcharts.py  plots.py
src/instrumentum/explainability/: __init__.py  explainers.py  shap_extension.py  shap_plots.py
src/instrumentum/feature_generation/: interactions.py
src/instrumentum/feature_preprocess/: to_numeric.py  utils.py
src/instrumentum/feature_selection/: correlation.py  old_correlations.py  stepwise.py  swcopy.py
src/instrumentum/features/: stepwise.py
src/instrumentum/model_tuning/: _optuna_dispatchers.py  old_wrapper_optuna.py  wrapper_optuna.py
src/instrumentum/scorers/: _optuna_dispatchers.py  optuna_wrappers.py
src/instrumentum/time_series/: __init__.py
src/instrumentum/utils/: _decorators.py  scorer_wrappers.py  utils.py  validation.py
tests/: conftest.py  test_cluster_selection.py  test_dynamicStepwise.py  test_dynamic_stepwise.py  test_instrumentum.py
