[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.poetry]
name = "instrumentum"
version = "0.8.16"
description = "General utilities for data science projects"
authors = ["Federico Montanana"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.8,<3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
sklearn = "^0.0"
joblib = "^1.1.0"
optuna = "^2.10.0"
optbinning = "^0.13.0"
fastcluster = "^1.2.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
python-semantic-release = "^7.19.2"
black = "^22.3.0"
ipython = {extras = ["notebook"], version = "^7.29.0"}
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
