[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.poetry]
authors = ["Federico Montanana"]
description = "General utilities for data science projects"
license = "MIT"
name = "instrumentum"
readme = "README.md"
version = "0.8.16"

[tool.poetry.dependencies]
joblib = "^1.1.0"
numpy = "1.22.4"
optbinning = "^0.13.0"
optuna = "^2.10.0"
pandas = "^1.3.3"
#python = "^3.8" <-- scipy random error if left this way
python = ">=3.8,<3.11"
seaborn = "^0.11.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
flake8 = "^4.0.1"
ipykernel = "^6.4.1"
ipython = {extras = ["notebook"], version = "^7.29.0"}
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
python-semantic-release = "^7.19.2"
tox = "^3.25.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.run]
omit = [
  "*init*",
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
use_parentheses = true

[tool.black]
include = '(?:src|tests)\/.*\.pyi?$'
line-length = 79
target-version = ['py38']
